[gd_scene load_steps=50 format=3 uid="uid://bw88w6lnap4dm"]

[ext_resource type="Script" path="res://LUNAR ODDyssey/Scripts/jinsoul.gd" id="1_y64fx"]
[ext_resource type="Texture2D" uid="uid://dfg772kc8l7xv" path="res://LUNAR ODDyssey/Assets/Sprites/Mini_Sprites/Jinsoul_Mini/sheet.png" id="2_aaadj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkj1t"]
size = Vector2(9, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_juui8"]
atlas = ExtResource("2_aaadj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_adgoa"]
atlas = ExtResource("2_aaadj")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6crd"]
atlas = ExtResource("2_aaadj")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b04uo"]
atlas = ExtResource("2_aaadj")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_br3re"]
atlas = ExtResource("2_aaadj")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2an3l"]
atlas = ExtResource("2_aaadj")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_th4mw"]
atlas = ExtResource("2_aaadj")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcx2f"]
atlas = ExtResource("2_aaadj")
region = Rect2(128, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll4fh"]
atlas = ExtResource("2_aaadj")
region = Rect2(0, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrqf8"]
atlas = ExtResource("2_aaadj")
region = Rect2(32, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw6a5"]
atlas = ExtResource("2_aaadj")
region = Rect2(64, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8ffi"]
atlas = ExtResource("2_aaadj")
region = Rect2(96, 352, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rot3"]
atlas = ExtResource("2_aaadj")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnlwk"]
atlas = ExtResource("2_aaadj")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cavxv"]
atlas = ExtResource("2_aaadj")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_buhdn"]
atlas = ExtResource("2_aaadj")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ss1d3"]
atlas = ExtResource("2_aaadj")
region = Rect2(32, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv6up"]
atlas = ExtResource("2_aaadj")
region = Rect2(64, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c14xt"]
atlas = ExtResource("2_aaadj")
region = Rect2(96, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uurl3"]
atlas = ExtResource("2_aaadj")
region = Rect2(128, 320, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wvdu"]
atlas = ExtResource("2_aaadj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4hhs"]
atlas = ExtResource("2_aaadj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqsrq"]
atlas = ExtResource("2_aaadj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uuko4"]
atlas = ExtResource("2_aaadj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_in4x4"]
atlas = ExtResource("2_aaadj")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6k2b"]
atlas = ExtResource("2_aaadj")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yibgp"]
atlas = ExtResource("2_aaadj")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6jcq"]
atlas = ExtResource("2_aaadj")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ys0qo"]
atlas = ExtResource("2_aaadj")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1mjk"]
atlas = ExtResource("2_aaadj")
region = Rect2(128, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkxor"]
atlas = ExtResource("2_aaadj")
region = Rect2(160, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fy3yb"]
atlas = ExtResource("2_aaadj")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2jd8"]
atlas = ExtResource("2_aaadj")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3l3a"]
atlas = ExtResource("2_aaadj")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ff5k8"]
atlas = ExtResource("2_aaadj")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylnrt"]
atlas = ExtResource("2_aaadj")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6r2d"]
atlas = ExtResource("2_aaadj")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_486nn"]
atlas = ExtResource("2_aaadj")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrpdo"]
atlas = ExtResource("2_aaadj")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hcyth"]
atlas = ExtResource("2_aaadj")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci5c5"]
atlas = ExtResource("2_aaadj")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlknv"]
atlas = ExtResource("2_aaadj")
region = Rect2(128, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_k4lrj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_juui8")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adgoa")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6crd")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b04uo")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_br3re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2an3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_th4mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcx2f")
}],
"loop": false,
"name": &"punch_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll4fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrqf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw6a5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8ffi")
}],
"loop": false,
"name": &"punch_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rot3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnlwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cavxv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_buhdn")
}],
"loop": false,
"name": &"punch_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ss1d3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv6up")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c14xt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uurl3")
}],
"loop": false,
"name": &"punch_up",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wvdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4hhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqsrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uuko4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_in4x4")
}],
"loop": true,
"name": &"walk_down",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6k2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yibgp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6jcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ys0qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1mjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkxor")
}],
"loop": true,
"name": &"walk_left",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fy3yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2jd8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3l3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ff5k8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylnrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6r2d")
}],
"loop": true,
"name": &"walk_right",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_486nn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrpdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hcyth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci5c5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlknv")
}],
"loop": true,
"name": &"walk_up",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_7h4pa"]
resource_name = "punch"
length = 0.5
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.333333),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_breaking"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r2t1m"]
_data = {
"punch": SubResource("Animation_7h4pa")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3g8jq"]
size = Vector2(19, 18)

[node name="Jinsoul" type="CharacterBody2D"]
script = ExtResource("1_y64fx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -6.5)
shape = SubResource("RectangleShape2D_hkj1t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -16)
sprite_frames = SubResource("SpriteFrames_k4lrj")
animation = &"idle_down"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r2t1m")
}

[node name="PunchHitbox" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchHitbox"]
position = Vector2(0.5, -9)
shape = SubResource("RectangleShape2D_3g8jq")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5.5, 5.5)

[node name="PunchAudio" type="AudioStreamPlayer" parent="."]
volume_db = -16.0
bus = &"SFX"

[connection signal="body_entered" from="PunchHitbox" to="." method="_on_PunchHitbox_body_entered"]
